# TICKET-BOT-CV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cogs/: help.py  on_mention.py  tickets.py  triggers.py
scripts/: __init__.py  sync_application_emojis.py
tests/: test_application_emojis.py  test_database.py  test_source_safety.py  test_startup.py
utils/: application_emojis.py  author_info.py  config.py  database.py  error_handler.py  helpers.py  theme.py  tickets.py  variables.py
views/: __init__.py  modals.py  panel_views.py  ticket_views.py
